cluster-setup/k8s/feast-offline-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feast-offline-service
  namespace: mlops-workshop
  labels:
    app: feast-offline
spec:
  type: ClusterIP
  selector:
    app: jupyter
  ports:
    - name: feast-offline
      port: 8815
      targetPort: 8815
