cluster-setup/k8s/feast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feast-service
  namespace: mlops-workshop
  labels:
    app: feast
spec:
  type: ClusterIP
  selector:
    app: jupyter
  ports:
    - name: feast
      port: 6566
      targetPort: 6566
