cluster-setup/k8s/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-service
  namespace: mlops-workshop
  labels:
    app: jupyter
spec:
  type: ClusterIP
  selector:
    app: jupyter
  ports:
    - name: jupyter
      port: 8888
      targetPort: 8888
