cluster-setup/k8s/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: mlops-workshop
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: quay.io/aniket-redhat/postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgresdata
            - mountPath: /docker-entrypoint-initdb.d
              name: init-sql
      volumes:
        - name: postgresdata
          emptyDir: {}
        - name: init-sql
          configMap:
            name: postgres-init-sql

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: mlops-workshop
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
